--- a/dind/ros2/Dockerfile
+++ b/dind/ros2/Dockerfile
@@ -1,2 +1,8 @@
-FROM ros:humble-ros-base
+FROM takanotaiga/roboware_base:humble
 
+COPY ws /ws
+
+COPY entrypoint.bash /bin/entrypoint.bash
+RUN chmod +x /bin/entrypoint.bash
+
+ENTRYPOINT ["entrypoint.bash"]
