--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,10 +18,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Docker Image
         run: |
-          docker build --tag ghcr.io/$GITHUB_ACTOR/roboware-ci:latest \
-          --tag ghcr.io/$GITHUB_ACTOR/roboware-ci:$(echo $GITHUB_SHA | head -c7) \
+          docker build --tag ghcr.io/hakoroboken/rwci:latest \
+          --tag ghcr.io/hakoroboken/rwci:$(echo $GITHUB_SHA | head -c7) \
           ./base_image
       - name: Push Docker Image
         run: |
-          docker push ghcr.io/$GITHUB_ACTOR/roboware-ci:latest
-          docker push ghcr.io/$GITHUB_ACTOR/roboware-ci:$(echo $GITHUB_SHA | head -c7)
+          docker push ghcr.io/hakoroboken/rwci:latest
+          docker push ghcr.io/hakoroboken/rwci:$(echo $GITHUB_SHA | head -c7)
